--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body class="main__body">
     <!-- Header -->
-    <!-- @@include('./html/_header.html') -->
+     @@include('./html/_header.html')
 
     <!-- Main Page -->
-    <main></main>
+    <main>
+        @@include('./html/_companies.html')
+    </main>
 
     <!-- Footer -->
     <!-- @@include('./html/_footer.html') -->
